hphp/hack/test/typecheck/reactive/parse_missing_reactivity3.php.exp
File "parse_missing_reactivity3.php", line 4, characters 3-21:
__OnlyRxIfImpl and __AtMostRxAsArgs annotations cannot be used without __Rx, __RxShallow, or __RxLocal. (Parsing[1002])
