hphp/hack/test/typecheck/reactive/parse_missing_reactivity3.php
<?hh // strict
<<file: __EnableUnstableFeatures('coeffects_provisional')>>

class C {
  <<__AtMostRxAsArgs>>
  public function f(): void {}
}
